--- a/settings.json
+++ b/settings.json
@@ -19,5 +19,8 @@
         "Username": {
             "1080643375960707092": "Asicalug"
         }
+    },
+    "Giveaway": {
+        "Users": 940097755941048390
     }
 }
