Added an auto role system

--- a/settings.json
+++ b/settings.json
@@ -21,6 +21,7 @@
         }
     },
     "Giveaway": {
-        "Users": 940097755941048390
+        "Users": 1080643375960707092,
+        "User": "interaction.user.id"
     }
 }
