Added a Poll command & New ticket channels will sync the category's perissions

--- a/settings.json
+++ b/settings.json
@@ -17,11 +17,21 @@
     },
     "Link": {
         "Username": {
-            "1080643375960707092": "Asicalug"
+            "1080643375960707092": "asicalug"
         }
     },
     "Giveaway": {
         "Users": 1080643375960707092,
         "User": "interaction.user.id"
+    },
+    "Messages": {
+        "1080643375960707092": 75,
+        "1140892605505351741": 23,
+        "501070337346371584": 7
+    },
+    "Poll": {
+        "Voted": {
+            "1080643375960707092": "1"
+        }
     }
 }
